--- a/ChatBluetooth/app/src/main/res/values/strings.xml
+++ b/ChatBluetooth/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">ChatBluetooth</string>
+    <string name="search">Search</string>
+    <string name="chat">Chat</string>
 </resources>
