--- a/ChatBluetooth/app/src/main/res/values/strings.xml
+++ b/ChatBluetooth/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">ChatBluetooth</string>
-    <string name="search">Search</string>
-    <string name="chat">Chat</string>
+    <string name="search">Ricerca</string>
+    <string name="chat">  Chat   </string>
     <string name="btnSend">Send</string>
     <string name="hint_message">Insert Message</string>
     <string name="menu_chatlist_delete">Delete</string>
