--- a/ChatBluetooth/app/src/main/res/values-en-rGB/strings.xml
+++ b/ChatBluetooth/app/src/main/res/values-en-rGB/strings.xml
@@ -24,4 +24,5 @@
     <string name="descr_iv_aes">On_Off_AES</string>
     <string name="descr_iv_emoticons">Emoticons</string>
     <string name="messaggi">messaggi</string>
+    <string name="menu_delete_all">Delete all chats</string>
 </resources>
