--- a/ChatBluetooth/app/src/main/res/values-it-rIT/strings.xml
+++ b/ChatBluetooth/app/src/main/res/values-it-rIT/strings.xml
@@ -24,4 +24,5 @@
     <string name="descr_iv_aes">Attiva_Disattiva AES</string>
     <string name="descr_iv_emoticons">Emoticons</string>
     <string name="messaggi">messaggi</string>
+    <string name="menu_delete_all">Cancella tutte le chat</string>
 </resources>
