--- a/ChatBluetooth/app/src/main/res/values-en-rGB/strings.xml
+++ b/ChatBluetooth/app/src/main/res/values-en-rGB/strings.xml
@@ -25,4 +25,5 @@
     <string name="descr_iv_emoticons">Emoticons</string>
     <string name="messaggi">messaggi</string>
     <string name="menu_delete_all">Delete all chats</string>
+    <string name="chats_deleted">All chats deleted</string>
 </resources>
