--- a/ChatBluetooth/app/src/main/res/values-it-rIT/strings.xml
+++ b/ChatBluetooth/app/src/main/res/values-it-rIT/strings.xml
@@ -25,4 +25,5 @@
     <string name="descr_iv_emoticons">Emoticons</string>
     <string name="messaggi">messaggi</string>
     <string name="menu_delete_all">Cancella tutte le chat</string>
+    <string name="chats_deleted">Chat eliminate</string>
 </resources>
