--- a/ChatBluetooth/app/src/main/res/values-en-rGB/strings.xml
+++ b/ChatBluetooth/app/src/main/res/values-en-rGB/strings.xml
@@ -29,4 +29,5 @@
     <string name="membri_gruppo">Members: Bramucci Adriano, Conti Matteo, Mazzetti Massimo, Picchioni Stefano</string>
     <string name="nome_progetto">Project: Bluetooth Chat</string>
     <string name="nome_corso">Course: Mobile Programming 2020</string>
+    <string name="about_us">About us</string>
 </resources>
