--- a/ChatBluetooth/app/src/main/res/values-it-rIT/strings.xml
+++ b/ChatBluetooth/app/src/main/res/values-it-rIT/strings.xml
@@ -29,4 +29,5 @@
     <string name="membri_gruppo">Membri: Bramucci Adriano, Conti Matteo, Mazzetti Massimo, Picchioni Stefano</string>
     <string name="nome_progetto">Progetto: Chat Bluetooth</string>
     <string name="nome_corso">Corso: Mobile Programming 2020</string>
+    <string name="about_us">Chi siamo</string>
 </resources>
