--- a/ChatBluetooth/app/src/main/res/values/strings.xml
+++ b/ChatBluetooth/app/src/main/res/values/strings.xml
@@ -27,7 +27,7 @@
     <!-- non tradurre altrimenti il db non funziona -->
     <string name="messaggi" translatable="false">messaggi</string>
     <string name="nome_gruppo">Gruppo: QR...ntine</string>
-    <string name="about_us" translatable="false">About Us</string>
+    <string name="about_us">Chi siamo</string>
     <string name="membri_gruppo">Membri: Bramucci Adriano, Conti Matteo, Mazzetti Massimo, Picchioni Stefano</string>
     <string name="nome_progetto">Progetto: Chat Bluetooth</string>
     <string name="nome_corso">Corso: Mobile Programming 2020</string>
